--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,16 @@
         android:theme="@style/Theme.Intent"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity_third"
             android:exported="false" />
         <activity
             android:name=".activity_second"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".front"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
